fixes edge case for very very very long words overflowing post content box

--- a/FrontEnd/React/NextJS/src/app/page.module.css
+++ b/FrontEnd/React/NextJS/src/app/page.module.css
@@ -85,5 +85,9 @@
 
   & > .postContent {
     grid-area: post_content;
+    line-break: anywhere;
+    text-wrap: pretty;
+    word-break: break-word;
+    word-wrap: break-word;
   }
 }
